--- a/src/output.css
+++ b/src/output.css
@@ -580,18 +580,14 @@ video {
   right: 0px;
 }
 
-.bottom-0 {
-  bottom: 0px;
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
 }
 
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.mx-20 {
-  margin-left: 5rem;
-  margin-right: 5rem;
 }
 
 .mb-10 {
@@ -608,6 +604,10 @@ video {
 
 .mb-2 {
   margin-bottom: 0.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 
 .mb-4 {
@@ -630,24 +630,8 @@ video {
   margin-bottom: 2.25rem;
 }
 
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
 .flex {
   display: flex;
-}
-
-.h-full {
-  height: 100%;
-}
-
-.h-6 {
-  height: 1.5rem;
-}
-
-.h-\[24px\] {
-  height: 24px;
 }
 
 .w-\[25\%\] {
@@ -662,12 +646,12 @@ video {
   width: 36%;
 }
 
-.w-\[65\%\] {
-  width: 65%;
+.w-\[50\%\] {
+  width: 50%;
 }
 
-.w-full {
-  width: 100%;
+.w-\[65\%\] {
+  width: 65%;
 }
 
 .w-\[70\%\] {
@@ -678,38 +662,8 @@ video {
   width: 80%;
 }
 
-.w-\[75\%\] {
-  width: 75%;
-}
-
-.w-\[50\%\] {
-  width: 50%;
-}
-
-.w-\[100\%\] {
+.w-full {
   width: 100%;
-}
-
-.w-\[90\%\] {
-  width: 90%;
-}
-
-.w-6 {
-  width: 1.5rem;
-}
-
-.w-\[24px\] {
-  width: 24px;
-}
-
-.scale-50 {
-  --tw-scale-x: .5;
-  --tw-scale-y: .5;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.transform {
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .items-center {
@@ -740,16 +694,12 @@ video {
   gap: 1rem;
 }
 
-.gap-5 {
-  gap: 1.25rem;
-}
-
-.gap-20 {
-  gap: 5rem;
-}
-
 .gap-40 {
   gap: 10rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
 }
 
 .gap-6 {
@@ -770,26 +720,17 @@ video {
   background-color: rgb(249 249 249 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#f9f9f915\] {
+  background-color: #f9f9f915;
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#f9f9f917\] {
-  background-color: #f9f9f917;
-}
-
-.bg-\[\#f9f9f915\] {
-  background-color: #f9f9f915;
-}
-
 .p-16 {
   padding: 4rem;
-}
-
-.px-16 {
-  padding-left: 4rem;
-  padding-right: 4rem;
 }
 
 .px-20 {
@@ -817,64 +758,14 @@ video {
   padding-bottom: 1rem;
 }
 
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
-.px-28 {
-  padding-left: 7rem;
-  padding-right: 7rem;
-}
-
-.px-40 {
-  padding-left: 10rem;
-  padding-right: 10rem;
-}
-
-.px-60 {
-  padding-left: 15rem;
-  padding-right: 15rem;
-}
-
-.px-80 {
-  padding-left: 20rem;
-  padding-right: 20rem;
-}
-
-.px-96 {
-  padding-left: 24rem;
-  padding-right: 24rem;
-}
-
-.px-\[500px\] {
-  padding-left: 500px;
-  padding-right: 500px;
-}
-
-.py-\[60px\] {
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-
-.py-\[62px\] {
-  padding-top: 62px;
-  padding-bottom: 62px;
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .py-\[61px\] {
   padding-top: 61px;
   padding-bottom: 61px;
-}
-
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
 }
 
 .pb-14 {
@@ -889,8 +780,8 @@ video {
   padding-left: 2rem;
 }
 
-.pr-24 {
-  padding-right: 6rem;
+.pt-14 {
+  padding-top: 3.5rem;
 }
 
 .pt-16 {
@@ -899,18 +790,6 @@ video {
 
 .pt-20 {
   padding-top: 5rem;
-}
-
-.pt-10 {
-  padding-top: 2.5rem;
-}
-
-.pt-8 {
-  padding-top: 2rem;
-}
-
-.pt-14 {
-  padding-top: 3.5rem;
 }
 
 .text-center {
@@ -942,14 +821,14 @@ video {
   line-height: 1.75rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-normal {
@@ -987,14 +866,6 @@ video {
   transition-duration: 150ms;
 }
 
-.delay-200 {
-  transition-delay: 200ms;
-}
-
-.duration-200 {
-  transition-duration: 200ms;
-}
-
 .duration-300 {
   transition-duration: 300ms;
 }
@@ -1003,37 +874,120 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media (min-width: 481px) {
+  .min-\[481px\]\:container {
+    width: 100%;
+  }
+
+  @media (min-width: 640px) {
+    .min-\[481px\]\:container {
+      max-width: 640px;
+    }
+  }
+
+  .min-\[481px\]\:container {
+    width: 100%;
+  }
+
+  @media (min-width: 640px) {
+    .min-\[481px\]\:container {
+      max-width: 640px;
+    }
+  }
+
+  @media (min-width: 768px) {
+    .min-\[481px\]\:container {
+      max-width: 768px;
+    }
+  }
+
+  .min-\[481px\]\:container {
+    width: 100%;
+  }
+
+  @media (min-width: 640px) {
+    .min-\[481px\]\:container {
+      max-width: 640px;
+    }
+  }
+
+  @media (min-width: 768px) {
+    .min-\[481px\]\:container {
+      max-width: 768px;
+    }
+  }
+
+  @media (min-width: 1024px) {
+    .min-\[481px\]\:container {
+      max-width: 1024px;
+    }
+  }
+
+  .min-\[481px\]\:container {
+    width: 100%;
+  }
+
+  @media (min-width: 640px) {
+    .min-\[481px\]\:container {
+      max-width: 640px;
+    }
+  }
+
+  @media (min-width: 768px) {
+    .min-\[481px\]\:container {
+      max-width: 768px;
+    }
+  }
+
+  @media (min-width: 1024px) {
+    .min-\[481px\]\:container {
+      max-width: 1024px;
+    }
+  }
+
+  @media (min-width: 1280px) {
+    .min-\[481px\]\:container {
+      max-width: 1280px;
+    }
+  }
+
+  .min-\[481px\]\:container {
+    width: 100%;
+  }
+
+  @media (min-width: 640px) {
+    .min-\[481px\]\:container {
+      max-width: 640px;
+    }
+  }
+
+  @media (min-width: 768px) {
+    .min-\[481px\]\:container {
+      max-width: 768px;
+    }
+  }
+
+  @media (min-width: 1024px) {
+    .min-\[481px\]\:container {
+      max-width: 1024px;
+    }
+  }
+
+  @media (min-width: 1280px) {
+    .min-\[481px\]\:container {
+      max-width: 1280px;
+    }
+  }
+
+  @media (min-width: 1536px) {
+    .min-\[481px\]\:container {
+      max-width: 1536px;
+    }
+  }
+}
+
 .hover\:translate-x-4:hover {
   --tw-translate-x: 1rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:rotate-45:hover {
-  --tw-rotate: 45deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:scale-50:hover {
-  --tw-scale-x: .5;
-  --tw-scale-y: .5;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:-scale-50:hover {
-  --tw-scale-x: -.5;
-  --tw-scale-y: -.5;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:scale-125:hover {
-  --tw-scale-x: 1.25;
-  --tw-scale-y: 1.25;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:scale-110:hover {
-  --tw-scale-x: 1.1;
-  --tw-scale-y: 1.1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1043,61 +997,201 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.hover\:scale-100:hover {
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:-scale-105:hover {
-  --tw-scale-x: -1.05;
-  --tw-scale-y: -1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:scale-x-105:hover {
-  --tw-scale-x: 1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:-scale-y-105:hover {
-  --tw-scale-y: -1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:scale-y-105:hover {
-  --tw-scale-y: 1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .hover\:transform:hover {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.hover\:bg-\[\#F9F9F950\]:hover {
-  background-color: #F9F9F950;
+.hover\:bg-\[\#2a254b15\]:hover {
+  background-color: #2a254b15;
 }
 
 .hover\:bg-\[\#F9F9F940\]:hover {
   background-color: #F9F9F940;
 }
 
-.hover\:bg-\[\#2A254B20\]:hover {
-  background-color: #2A254B20;
+@media (max-width: 480px) {
+  .max-\[480px\]\:bottom-0 {
+    bottom: 0px;
+  }
+
+  .max-\[480px\]\:m-0 {
+    margin: 0px;
+  }
+
+  .max-\[480px\]\:mb-16 {
+    margin-bottom: 4rem;
+  }
+
+  .max-\[480px\]\:mb-8 {
+    margin-bottom: 2rem;
+  }
+
+  .max-\[480px\]\:mt-20 {
+    margin-top: 5rem;
+  }
+
+  .max-\[480px\]\:mb-10 {
+    margin-bottom: 2.5rem;
+  }
+
+  .max-\[480px\]\:block {
+    display: block;
+  }
+
+  .max-\[480px\]\:grid {
+    display: grid;
+  }
+
+  .max-\[480px\]\:hidden {
+    display: none;
+  }
+
+  .max-\[480px\]\:w-\[70\%\] {
+    width: 70%;
+  }
+
+  .max-\[480px\]\:w-full {
+    width: 100%;
+  }
+
+  .max-\[480px\]\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .max-\[480px\]\:flex-wrap {
+    flex-wrap: wrap;
+  }
+
+  .max-\[480px\]\:justify-start {
+    justify-content: flex-start;
+  }
+
+  .max-\[480px\]\:justify-center {
+    justify-content: center;
+  }
+
+  .max-\[480px\]\:gap-4 {
+    gap: 1rem;
+  }
+
+  .max-\[480px\]\:gap-8 {
+    gap: 2rem;
+  }
+
+  .max-\[480px\]\:gap-24 {
+    gap: 6rem;
+  }
+
+  .max-\[480px\]\:bg-white {
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  }
+
+  .max-\[480px\]\:p-0 {
+    padding: 0px;
+  }
+
+  .max-\[480px\]\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .max-\[480px\]\:py-6 {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
+  .max-\[480px\]\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .max-\[480px\]\:pt-10 {
+    padding-top: 2.5rem;
+  }
+
+  .max-\[480px\]\:pb-\[440px\] {
+    padding-bottom: 440px;
+  }
+
+  .max-\[480px\]\:pb-10 {
+    padding-bottom: 2.5rem;
+  }
+
+  .max-\[480px\]\:pb-0 {
+    padding-bottom: 0px;
+  }
+
+  .max-\[480px\]\:text-start {
+    text-align: start;
+  }
+
+  .max-\[480px\]\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .max-\[480px\]\:leading-normal {
+    line-height: 1.5;
+  }
+
+  .max-\[480px\]\:leading-relaxed {
+    line-height: 1.625;
+  }
+
+  .max-\[480px\]\:tracking-wide {
+    letter-spacing: 0.025em;
+  }
 }
 
-.hover\:bg-\[\#2A254B30\]:hover {
-  background-color: #2A254B30;
+@media (max-width: 440px) {
+  .max-\[440px\]\:w-\[60\%\] {
+    width: 60%;
+  }
 }
 
-.hover\:bg-\[\#2a254b44\]:hover {
-  background-color: #2a254b44;
+@media (max-width: 420px) {
+  .max-\[420px\]\:pb-\[400px\] {
+    padding-bottom: 400px;
+  }
 }
 
-.hover\:bg-\[\#2a254b10\]:hover {
-  background-color: #2a254b10;
+@media (max-width: 360px) {
+  .max-\[360px\]\:pb-\[300px\] {
+    padding-bottom: 300px;
+  }
+
+  .max-\[360px\]\:pb-\[340px\] {
+    padding-bottom: 340px;
+  }
 }
 
-.hover\:bg-\[\#2a254b15\]:hover {
-  background-color: #2a254b15;
+@media (max-width: 344px) {
+  .max-\[344px\]\:mb-5 {
+    margin-bottom: 1.25rem;
+  }
+
+  .max-\[344px\]\:block {
+    display: block;
+  }
+
+  .max-\[344px\]\:w-full {
+    width: 100%;
+  }
+}
+
+@media (min-width: 481px) {
+  .min-\[481px\]\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .min-\[481px\]\:hidden {
+    display: none;
+  }
+
+  .min-\[481px\]\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
 }
